[gd_scene load_steps=3 format=2]

[ext_resource path="res://RCDLoader.gd" type="Script" id=1]
[ext_resource path="res://ObjectInfoSheet.tscn" type="PackedScene" id=2]

[node name="rcdloader" type="Node"]
script = ExtResource( 1 )

[node name="RoomCanvas" type="Node2D" parent="."]
position = Vector2( 43.5581, 114.661 )

[node name="Objects" type="Node2D" parent="RoomCanvas"]
z_index = 150

[node name="Collision" type="Node2D" parent="RoomCanvas"]
z_index = 200

[node name="Visuals" type="Node2D" parent="RoomCanvas"]

[node name="Node2D" type="Node2D" parent="."]
z_index = 200

[node name="RoomJump" type="HBoxContainer" parent="Node2D"]
margin_right = 316.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Node2D/RoomJump"]
margin_right = 58.0
margin_bottom = 59.0

[node name="RichTextLabel" type="Label" parent="Node2D/RoomJump/HBoxContainer"]
margin_right = 58.0
margin_bottom = 14.0
text = "Zone ID"

[node name="ZoneEdit" type="LineEdit" parent="Node2D/RoomJump/HBoxContainer"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="VBoxContainer" parent="Node2D/RoomJump"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 59.0

[node name="RichTextLabel" type="Label" parent="Node2D/RoomJump/HBoxContainer2"]
margin_right = 58.0
margin_bottom = 14.0
text = "Room ID"

[node name="RoomEdit" type="LineEdit" parent="Node2D/RoomJump/HBoxContainer2"]
margin_top = 18.0
margin_right = 58.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="VBoxContainer" parent="Node2D/RoomJump"]
margin_left = 124.0
margin_right = 186.0
margin_bottom = 59.0

[node name="RichTextLabel" type="Label" parent="Node2D/RoomJump/HBoxContainer3"]
margin_right = 62.0
margin_bottom = 14.0
text = "Screen ID"

[node name="ScreenEdit" type="LineEdit" parent="Node2D/RoomJump/HBoxContainer3"]
visible = false
margin_right = 58.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenSelector" type="OptionButton" parent="Node2D/RoomJump/HBoxContainer3"]
margin_top = 18.0
margin_right = 62.0
margin_bottom = 38.0
align = 1

[node name="Jump" type="Button" parent="Node2D/RoomJump"]
margin_left = 190.0
margin_right = 224.0
margin_bottom = 59.0
text = "Go!"

[node name="Write" type="Button" parent="Node2D/RoomJump"]
margin_left = 228.0
margin_right = 316.0
margin_bottom = 59.0
text = "Write to file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add new room" type="Button" parent="Node2D/RoomJump"]
margin_left = 320.0
margin_right = 434.0
margin_bottom = 59.0
text = "Add new screen"

[node name="CollisionCheckbox" type="CheckBox" parent="Node2D/RoomJump"]
margin_left = 438.0
margin_right = 579.0
margin_bottom = 59.0
pressed = true
text = "Also add collision"

[node name="EditType" type="TabContainer" parent="."]
margin_left = 772.644
margin_top = 45.0
margin_right = 1072.64
margin_bottom = 101.0
use_hidden_tabs_for_min_size = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layers" type="Button" parent="EditType"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
text = "Layers"

[node name="Collision" type="Button" parent="EditType"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
text = "Collision"

[node name="Objects" parent="EditType" instance=ExtResource( 2 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="item_selected" from="Node2D/RoomJump/HBoxContainer3/ScreenSelector" to="." method="_on_screen_selected"]
[connection signal="pressed" from="Node2D/RoomJump/Jump" to="." method="_on_Jump_pressed"]
[connection signal="pressed" from="Node2D/RoomJump/Write" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Node2D/RoomJump/Add new room" to="." method="_on_add_new_room_pressed"]

[editable path="EditType/Objects"]
